Development pending on Issue #2

--- a/LaTeX/diodo.tex
+++ b/LaTeX/diodo.tex
@@ -89,8 +89,9 @@ sperimentali su un'ampia regione di punti di lavoro.
 %================================================================
 \section{Cenni Teorici}
 Secondo le nostre ipotesi, un diodo reale può essere schematizzato come un
-resistore ohmico\footnote{Vista la simmetria della giunzione propriamente
-si considerano due resistori -equivalenti-, disposti ai lati del diodo ideale}
+resistore ohmico\footnote{Vista la simmetria della giunzione, propriamente
+si considerano due resistori -equivalenti- disposti ai lati del diodo ideale,
+la cui resistenza non è indipendente dalle condizioni di operazione.}
 ed un diodo ideale in serie. Pertanto ci aspettiamo che la corrente che
 attraversa questi elementi del circuito sia la stessa:
 \begin{equation}
@@ -105,7 +106,7 @@ essere espressa secondo la legge:
 \end{equation}
 \begin{figure}[!h]
 	\centering 
- 		\includegraphics[scale=0.24]{confronto_curve.png}
+ 		\includegraphics[scale=0.23]{confronto_curve.png}
  	\caption{confronto degli andamenti: la curva di Shockley (in rosso) e la 
 	legge \eqref{eq: model} (in viola)}
 \end{figure}
@@ -436,7 +437,6 @@ corrente o di tensione.
 %                        Appendice A
 %================================================================
 \section{Appendice A: Filtraggio Dati}\label{app: A}
-
 %================================
 %         Introduzione
 %================================
