--- a/LaTeX/refs.bib
+++ b/LaTeX/refs.bib
@@ -6,7 +6,7 @@
 }
 @electronic{teensy,
 	URL = {https://www.pjrc.com/teensy/teensy31.html},
-	AUTHOR = {Paul Stoffregen},
+	AUTHOR = {Paul Stoffregen, others},
 	TITLE = {Teensy 3.2 Development Board},
 	ADDRESS = {Sherwood, Oregon, USA}
 }
@@ -40,8 +40,8 @@ archivePrefix = {arXiv},
 
 
 @MASTERSTHESIS{tesi,
-  AUTHOR =       {Chiara Manzoli},
-  TITLE =        {Il metodo di Newton e le sue varianti per sistemi di equazioni non lineari},
-  SCHOOL =       {Università di Bologna, corso di Laurea in Matematica},
-  YEAR =         {2015},
+  AUTHOR = {Chiara Manzoli},
+  TITLE = {Il metodo di Newton e le sue varianti per sistemi di equazioni non lineari},
+  SCHOOL = {Università di Bologna, corso di Laurea in Matematica},
+  YEAR =  {2015},
 }
